--- a/toto-list/src/main/resources/view/todo_list_view.fxml
+++ b/toto-list/src/main/resources/view/todo_list_view.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.ToDoController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="415.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ToDoController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#355638" height="422.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="295.0" />
+      <Label layoutX="40.0" layoutY="25.0" text="My Day - ToDo List" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+       <ListView fx:id="listTask" layoutX="14.0" layoutY="72.0" prefHeight="244.0" prefWidth="262.0" />
+
+       <TextField fx:id="txtEnterTask" layoutX="14.0" layoutY="331.0" prefHeight="35.0" prefWidth="262.0" promptText="Enter your task" />
+      <Button layoutX="211.0" layoutY="380.0" mnemonicParsing="false" onAction="#btnAddTaskOnClick" text="Add Task" />
+   </children>
 </AnchorPane>
