--- a/toto-list/src/main/resources/view/todo_list_view.fxml
+++ b/toto-list/src/main/resources/view/todo_list_view.fxml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="415.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ToDoController">
+<AnchorPane prefHeight="491.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ToDoController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#355638" height="422.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="295.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#355638" height="491.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="295.0" />
       <Label layoutX="40.0" layoutY="25.0" text="My Day - ToDo List" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
@@ -20,6 +22,14 @@
        <ListView fx:id="listTask" layoutX="14.0" layoutY="72.0" prefHeight="244.0" prefWidth="262.0" />
 
        <TextField fx:id="txtEnterTask" layoutX="14.0" layoutY="331.0" prefHeight="35.0" prefWidth="262.0" promptText="Enter your task" />
-      <Button layoutX="211.0" layoutY="380.0" mnemonicParsing="false" onAction="#btnAddTaskOnClick" text="Add Task" />
+      <Button layoutX="211.0" layoutY="422.0" mnemonicParsing="false" onAction="#btnAddTaskOnClick" text="Add Task" />
+      <TableView fx:id="tblTasks" layoutX="306.0" layoutY="20.0" prefHeight="386.0" prefWidth="402.0">
+        <columns>
+          <TableColumn fx:id="colCompletedTasks" prefWidth="292.7999267578125" text="COMPLETED TASKS" />
+            <TableColumn fx:id="colDate" prefWidth="107.199951171875" text="DATE" />
+        </columns>
+      </TableView>
+      <Button layoutX="657.0" layoutY="422.0" mnemonicParsing="false" onAction="#btnReloadOnAction" text="Reload" />
+      <DatePicker fx:id="txtDate" layoutX="44.0" layoutY="379.0" prefHeight="26.0" prefWidth="231.0" promptText="Enter task date" />
    </children>
 </AnchorPane>
